# oop_exercise_08

./: CMakeLists.txt  CoutProcessor.cpp  CoutProcessor.h  Figure.h  FigureFactory.cpp  FigureFactory.h  FileProcessor.cpp  FileProcessor.h  Makefile  Point.cpp  Point.h  Processor.h  Publisher.cpp  Publisher.h  Rectangle.cpp  Rectangle.h  Square.cpp  Square.h  Trapeze.cpp  Trapeze.h  main.cpp  report.docx
